# sink

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
contracts/nois-sink/: Cargo.toml  README.md
contracts/sink/: Cargo.toml
contracts/sink/examples/: schema.rs
contracts/sink/src/: contract.rs  error.rs  msg.rs  state.rs
devtools/: check_workspace.sh  format_sh.sh  set_version.sh
