[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.dependencies]
# nois = { git = "https://github.com/noislabs/nois", branch = "add-published-time" }
nois = "2.0.0"
cw2 = "2"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
panic = 'abort'
debug = false
debug-assertions = false
